# object_reconstruction

./: CMakeLists.txt  README.md  package.xml
cfg/: TransformPointcloud.cfg
config/: transform.rviz
launch/: camera_pipeline.launch
models/: short_ws.pcd
scripts/: capture.py  mesh_object.py  transform_pointcloud.py
